alignment fix

--- a/src/app/Containers/level-up/module/module.component.scss
+++ b/src/app/Containers/level-up/module/module.component.scss
@@ -2,6 +2,7 @@
 
 .content{
     margin: 20em;
+    text-align: justify;
 }
 
 #note-panel {
